@@ -36,19 +36,21 @@
 
 	<div class="left huge">
 
-		<span class="hugespan">
-			<h2>
-				<% $tourn->name %> 
-			</h2>
-		</span>
+		<div>
 
-		<span class="medspan">
-			<h4 style="text-align: right;">
-				<% $tourn->location %>  
-			</h4>
-		</span>
+			<span class="fivesixth">
+				<h2>
+					<% $tourn->name %> 
+				</h2>
+			</span>
 
-		<br style="clear: both;">
+			<span class="sixth rightalign top">
+				<h4>
+					<% $tourn->location %>  
+				</h4>
+			</span>
+
+		</div>
 
 		<& tourn_header.mas, tourn => $tourn, webpage_id => $webpage_id, account => $account &>
 
