@@ -1,4 +1,14 @@
 
+	- You can now enter 23 speaker point when using tenths via a really
+	  disgusting hack I'm not going to describe here.
+
+	- Removed the bad awful event-based room pooling system that never really
+	  worked that well and replaced it with the flexible round-based system
+	  that works much better. 
+
+	- Reworked the judge pools and settings to all be in one place under the
+	  Pairing menu with a tabbed interface that should be clearer. 
+
 	- Added an option under Setup -> Money -> Entry Fees to show waitlisted
 	  entries on an invoice for tournaments that require pre-payment before
 	  waitlist admission.
